--- a/PinBoard/assets/css/app.scss
+++ b/PinBoard/assets/css/app.scss
@@ -131,3 +131,6 @@ body .page .content .admin_tab_2 {
   background: darkgray;
 }
 
+body .page .content .admin_tab_3 {
+  background: darksalmon;
+}
